# infoprox

./: .gitignore  README.md  pyproject.toml
src/adventure/: cli.py
src/adventure/engine/: actions.py  describe.py  gen.py  loop.py  parser.py  saave.py  save.py  world.py
tests/: test_smoke.py
